@@ -1,3 +1,6 @@
+2009-09-17 delx
+	* Save cursor position separately for alternate screens (#2833765)
+
 2009-09-16 delx
 	* Fixed CMD-num tab switching (#2271203)
 	* Improved performance, blank lines are no longer constantly regenerated
